--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@ ga('create', 'your_google_analytics_id', 'auto');
 					<h1 id="user-name">Xavier Hocquet</h1>
 				</div>
 			</div>
+			<br>
+			<div class="row">
+				<div class="col-xs-12 user-profile text-center">
+					<a href="http://www.bartleby.com/102/76.html" target="_blank" class="quote-link">
+						<h3>For of all sad words of tongue or pen,</h3>
+						<h3>The saddest are these: "It might have been!"</h3>
+					</a>
+				</div>
+			</div>
+			<br><br>
 			<div class="row">
 				<div class="col-xs-12 user-social text-center">
 				
