--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -131,6 +131,10 @@ ga('create', 'your_google_analytics_id', 'auto');
 
 <li><p><a href="https://www.goodreads.com/book/show/10884">Enstein</a></p></li>
 
+<li><p><a href="https://www.goodreads.com/book/show/11468377">Thinking, Fast and Slow</a></p></li>
+
+<li><p><a href="https://www.goodreads.com/book/show/65229">Sources of Power: How People Make Decisions</a></p></li>
+
 <li><p><a href="https://www.goodreads.com/book/show/60211">The Shadow of the Torturer (The Book of the New Sun)</a></p></li>
 
 <li><p><a href="https://www.goodreads.com/book/show/106.Dune_Messiah">Dune Messiah</a></p></li>
