More tracker links

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@ ga('create', 'your_google_analytics_id', 'auto');
 
 
 
+<a href="https://www.goodreads.com/user/show/52019754-xavier-hocquet" title="GoodReads"><i class="fa fa-book fa-3x" aria-hidden="true"></i></a>
+<a href="https://www.discogs.com/user/meesles/collection" title="Discogs"><i class="fa fa-headphones fa-3x" aria-hidden="true"></i></a>
+<a href="https://kitsu.io/users/293088/library?status=current" title="Anime"><i class="fa fa-video-camera fa-3x" aria-hidden="true"></i></a>
 
 <a href="https://docs.google.com/document/d/1NkF057FcXJHJ0WFpiFlqJ3t80GODgBVdQNpsUFtZEBs/preview" title="Curriculum Vitae"><i class="fa fa-file-text fa-3x" aria-hidden="true"></i></a>
 
