--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -176,6 +176,7 @@ ga('create', 'your_google_analytics_id', 'auto');
 <li><a href="https://github.com/RichardLitt/awesome-fantasy">awesome-fantasy</a></li>
 <li><a href="https://github.com/sindresorhus/awesome-scifi">awesome-scifi</a></li>
 <li><a href="https://github.com/benas/awesome-software-craftsmanship">awesome-software-craftsmanship</a></li>
+<li><a href="https://github.com/binhnguyennus/awesome-scalability">awesome-scaling</a></li>
 </ul>
 
             </div>
