--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ ga('create', 'your_google_analytics_id', 'auto');
 					<p>Full-stack developer, linguist, foodie, world-traveler. I love all things learning, Japanese, and tech.</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4 user-description text-center">
+					<a href="javerscropt"><p><center>2018 Javascript Hack-o-thon! 🧠⚡</center></p></a>
+				</div>
+			</div>
 			<div class="push"></div>
 		</div>
 		<footer class="footer text-center">
