Add meteor app repo

--- a/javerscropt/index.html
+++ b/javerscropt/index.html
@@ -123,6 +123,7 @@ ga('create', 'your_google_analytics_id', 'auto');
       <table class="tech-table">
         <tr><td><a href="https://www.meteor.com/">Meteor</a></td><td><a href="https://angularjs.org/">Angular</a></td></tr>
         <tr><td colspan="2"><a href="https://www.meteor.com/tutorials/angular/creating-an-app">tutorial</a></td></tr>
+        <tr><td colspan="2"><a href="https://github.com/xhocquet/meteor-tasks">my app</a></td></tr>
       </table>
     </div>
   </div>
