--- a/javerscropt/index.html
+++ b/javerscropt/index.html
@@ -118,7 +118,7 @@ ga('create', 'your_google_analytics_id', 'auto');
 
 <div class="container wrapper">
   <div class="row">
-    <div class="col-md-4 col-md-offset-4 project-description first in-progress text-center">
+    <div class="col-md-4 col-md-offset-4 project-description first complete text-center">
       <h4>1) Some Enterprisey</h4>
       <table class="tech-table">
         <tr><td><a href="https://www.meteor.com/">Meteor</a></td><td><a href="https://angularjs.org/">Angular</a></td></tr>
@@ -129,7 +129,7 @@ ga('create', 'your_google_analytics_id', 'auto');
   </div>
   <div class="connector"></div>
   <div class="row">
-    <div class="col-md-4 col-md-offset-4 project-description text-center">
+    <div class="col-md-4 col-md-offset-4 project-description in-progress text-center">
       <h4>2) Get my hands on GraphQL</h4>
       <table class="tech-table">
         <tr><td><a href="https://graphql.org/">GraphQL</a></td><td><a href="https://www.apollographql.com/">Apollo</a></td></tr>
