Add GrpahQL repo

--- a/javerscropt/index.html
+++ b/javerscropt/index.html
@@ -135,6 +135,7 @@ ga('create', 'your_google_analytics_id', 'auto');
         <tr><td><a href="https://graphql.org/">GraphQL</a></td><td><a href="https://www.apollographql.com/">Apollo</a></td></tr>
         <tr><td><a href="https://nextjs.org/">NextJS</a></td></tr>
         <tr><td colspan="2"><a href="https://advancedreact.com/">tutorial</a></td></tr>
+        <tr><td colspan="2"><a href="https://github.com/xhocquet/GraphQL-NextJS-Appolo-">my app</a></td></tr>
       </table>
     </div>
   </div>
