--- a/javerscropt/index.html
+++ b/javerscropt/index.html
@@ -133,11 +133,12 @@ ga('create', 'your_google_analytics_id', 'auto');
   </div>
   <div class="connector"></div>
   <div class="row">
-    <div class="col-md-4 col-md-offset-4 project-description text-center">
+    <div class="col-md-4 col-md-offset-4 project-description in-progress text-center">
       <h4>3) Ember, looks fun</h4>
       <table class="tech-table">
         <tr><td><a href="https://www.emberjs.com/">Ember</a></td></tr>
         <tr><td><a href="https://yoember.com/">tutorial</a></td></tr>
+        <tr><td colspan="2"><a href="">my app</a></td></tr>
       </table>
     </div>
   </div>
