Music tracking post

--- a/code/index.html
+++ b/code/index.html
@@ -160,6 +160,7 @@
 </td></tr><tr><td width="50%">
 <ul>
   <li><a href="https://github.com/xhocquet/rust-personal-dashboard/">Personal Dashboard - Playing with Rust's Rocket framework</a></li>
+  <li><a href="https://github.com/xhocquet/rustlings">Rustlings</a></li>
 </ul>
 </td></tr></tbody></table>
 
