--- a/reflections/media-tracking/index.html
+++ b/reflections/media-tracking/index.html
@@ -156,6 +156,8 @@
 
 <h3 id="music">Music</h3>
 
+<p><a href="../music-tracking">Update! (02/2020)</a></p>
+
 <p>I want to start by saying that I&rsquo;m not going to be talking about my music library management which deserves a post of its own, but instead focus on physical media for this post.</p>
 
 <p>I&rsquo;m a vinyl guy. Again I could write a post about that, but I plan on accumulating a collection throughout my life and I need to keep track of what I have and what I want. Really, <a href="https://www.discogs.com/">Discogs</a> is a no-brainer and deserves its reputation. Both their website and apps are regularly updated and get faster, not slower. The marketplace is invaluable and probably the best place to buy records with a level of detail befiting any collector.</p>
